tests/sksl/errors/LayoutMultiplePrimitiveTypes.glsl
### Compilation failed:

error: 3: more than one primitive type layout qualifier
error: 4: more than one primitive type layout qualifier
error: 5: more than one primitive type layout qualifier
error: 6: more than one primitive type layout qualifier
error: 7: more than one primitive type layout qualifier
5 errors
